<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/examenAndroid"
        android:textSize="@dimen/txt18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guidelineTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="73dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="137dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="80dp"
        />

        <TextView
            android:id="@+id/datos_alumno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_datos_del_alumno"
            android:textSize="@dimen/txt14sp"
            android:textStyle="bold"
            android:textColor="@color/turquesa"
            app:layout_constraintTop_toBottomOf="@id/guidelineTop"
            app:layout_constraintStart_toStartOf="parent"

            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginLeft="@dimen/margin_16dp"

            />

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputFilledStyle"
            android:id="@+id/filledTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/guidelineTop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guidelineVertical"
            android:hint="@string/nombre"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginRight="@dimen/margin_16dp"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/filledTextField"
        app:layout_constraintEnd_toEndOf="parent"

        android:hint="@string/inputPassword"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/pts1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelinePts"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:text="@string/texto_pts"

        />

    <TextView
        android:id="@+id/respuestaCorrecta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt16sp"
        android:textStyle="bold"
        android:textColor="@color/turquesa"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        app:layout_constraintStart_toEndOf="@id/guidelinePts"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:text="@string/respuestaCorrecta"

        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pts1"
        app:layout_constraintBottom_toBottomOf="@id/respuestaCorrecta2"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:text="@string/componentesFlexibles"

        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/respuestaCorrecta"
        app:layout_constraintStart_toEndOf="@id/guidelineVertical"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        >
        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linearLayout" />
        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/constraintLayout" />
        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frameLayout" />


    </RadioGroup>

    <TextView
        android:id="@+id/pts2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelinePts"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:text="@string/texto_pts"

        />

    <TextView
        android:id="@+id/respuestaCorrecta2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt16sp"
        android:textStyle="bold"
        android:textColor="@color/turquesa"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toEndOf="@id/guidelinePts"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:text="@string/respuestaApliquen"

        />

    <TextView
        android:id="@+id/preguntaComponentes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/respuestaCorrecta2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:text="@string/preguntaComponentes"

        />

    <CheckBox
        android:id="@+id/checkBoxActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity"
        app:layout_constraintTop_toBottomOf="@id/preguntaComponentes"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/Margin8dp"
        android:layout_marginTop="@dimen/margin_16dp"
        />

    <CheckBox
        android:id="@+id/checkBoxView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewModel"
        app:layout_constraintTop_toBottomOf="@id/preguntaComponentes"
        app:layout_constraintStart_toEndOf="@+id/checkBoxActivity"
        android:layout_marginStart="2dp"
        android:layout_marginTop="@dimen/margin_16dp"
        />

    <CheckBox
        android:id="@+id/checkBoxJS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jS"
        app:layout_constraintTop_toBottomOf="@id/preguntaComponentes"
        app:layout_constraintStart_toEndOf="@+id/checkBoxView"
        android:layout_marginStart="2dp"
        android:layout_marginTop="@dimen/margin_16dp"
        />

    <CheckBox
        android:id="@+id/checkBoxRepo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/respository"
        app:layout_constraintTop_toBottomOf="@id/preguntaComponentes"
        app:layout_constraintStart_toEndOf="@+id/checkBoxJS"
        android:layout_marginStart="2dp"
        android:layout_marginTop="@dimen/margin_16dp"

        />

    <TextView
        android:id="@+id/pts3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/checkBoxActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelinePts"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:text="@string/texto_pts"

        />
    <TextView
        android:id="@+id/respuestaCorrecta3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt16sp"
        android:textStyle="bold"
        android:textColor="@color/turquesa"
        app:layout_constraintTop_toBottomOf="@id/checkBoxActivity"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:text="@string/preguntaDesarrollo" />

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/inputTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/respuestaCorrecta3"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/dependencyInjection"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="4"
            android:gravity="top|start"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonEnviarExamen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviarExamen"

        app:layout_constraintTop_toBottomOf="@+id/inputTextBox"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:backgroundTint="@color/turquesa"
       />


</androidx.constraintlayout.widget.ConstraintLayout>